@@ -607,23 +607,4 @@
   -->
   <!-- <copyField source="name" dest="alphaNameSort"/> -->
 
-
-  <!--
-    Similarity is the scoring routine for each document vs. a query. A
-    custom similarity may be specified here, but the default is fine for
-    most applications.
-  -->
-  <!--
-    <similarity class="org.apache.lucene.search.DefaultSimilarity"/>
-  -->
-  <!--
-    ... OR ... Specify a SimilarityFactory class name implementation
-    allowing parameters to be used.
-  -->
-  <!--
-    <similarity class="com.example.solr.CustomSimilarityFactory"> <str
-    name="paramkey">param value</str> </similarity>
-  -->
-
-
 </schema>
