@@ -140,6 +140,12 @@ Jetty 9.2.13.v20150730
 Upgrading from Solr 5.3
 -----------------------
 
+* DefaultSimilarityFactory has been renamed to ClassicSimilarityFactory to mach the underlying rename of
+  DefaultSimilarity to ClassicSimilarity and the (eventual) move away from using it as a default.
+  If you currently have DefaultSimilarityFactory explicitly refrenced in your schema.xml, you will now get
+  a warning urging you to edit your config to use the functionally identical ClassicSimilarityFactory.
+  DefaultSimilarityFactory will be removed completely in Solr 6.  See SOLR-8239 for more details.
+
 * SOLR-7859: The following APIs are now deprecated:
   - SolrCore.getStartTime: Use SolrCore.getStartTimeStamp instead.
   - SolrIndexSearcher.getOpenTime: Use SolrIndexSearcher.getOpenTimeStamp instead.
@@ -439,6 +445,8 @@ Other Changes
 
 * SOLR-8147: contrib/analytics FieldFacetAccumulator now throws IOException instead of SolrException
   (Scott Stults via Christine Poerschke)
+
+* SOLR-8239: Added ClassicSimilarityFactory, marked DefaultSimilarityFactory as deprecated. (hossman)
 
 ==================  5.3.1 ==================
 
